<resources>
    <string name="app_name">Dev-Intensive Chat</string>
    <string name="input_text">Введите текст</string>

    <string name="profile_user_name">John Doe</string>
    <string name="profile_user_rank">Junior Android Developer</string>
    <string name="profile_label_rating">Рейтинг</string>
    <string name="profile_label_respect">Уважение</string>
    <string name="profile_respect">0</string>

    <string name="profile_hint_last_name">Фамилия</string>
    <string name="profile_hint_first_name">Имя</string>
    <string name="profile_hint_about">О себе</string>
    <string name="profile_hint_repository">Репозиторий</string>
    <string name="menu_search_item">Поиск</string>

    <string name="toolbar_title_main_activity">@string/app_name</string>
    <string name="toolbar_title_group_activity">Создание группы</string>
    <string name="toolbar_title_archive_activity">Архив чатов</string>

    <string name="snake_bar_action_title_cancel">Отмена</string>

    <string name="chat_item_archive_title">Архив чатов</string>

</resources>
