<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ru.skillbranch.devintensive.ui.custom.AspectRatioImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:contentDescription="@string/app_name"
                android:src="@drawable/profile_bg"
                app:aspectRatio="1.78"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/spacing_normal_16">

            <ImageButton
                    android:layout_width="@dimen/btn_round_size_40"
                    android:layout_height="@dimen/btn_round_size_40"
                    android:layout_toStartOf="@id/iv_avatar"
                    android:layout_marginEnd="@dimen/spacing_huge_32"
                    android:layout_marginTop="36dp"
                    android:contentDescription="@string/app_name"
                    android:background="@drawable/btn_round_bg"
                    android:src="@drawable/ic_edit_black_24dp"/>
            <ImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="@dimen/avatar_round_size"
                    android:layout_height="@dimen/avatar_round_size"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/avatar_default"
                    android:layout_centerHorizontal="true"/>
            <ImageButton
                    android:layout_width="@dimen/btn_round_size_40"
                    android:layout_height="@dimen/btn_round_size_40"
                    android:layout_toEndOf="@id/iv_avatar"
                    android:layout_marginStart="@dimen/spacing_huge_32"
                    android:layout_marginTop="36dp"
                    android:contentDescription="@string/app_name"
                    android:background="@drawable/btn_round_bg"
                    android:src="@drawable/ic_switch_day_night"/>

            <TextView
                    android:id="@+id/tv_nick_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_avatar"
                    android:layout_centerHorizontal="true"
                    android:text="@string/profile_user_name"
                    style="@style/Profile.Header.Nickname"/>
            <TextView
                    android:id="@+id/tv_rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_nick_name"
                    android:layout_centerHorizontal="true"
                    android:text="@string/profile_user_rank"
                    style="@style/Profile.Header.Rank"/>

        </RelativeLayout>
    </FrameLayout>
    
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/color_primary_light"
            android:baselineAligned="false">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="@dimen/spacing_normal_16"
                android:paddingBottom="@dimen/spacing_normal_16">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_respect"
                    android:drawableStart="@drawable/ic_sp_24"
                    android:drawablePadding="@dimen/spacing_tiny_4"
                    style="@style/Profile.Metrics.Value"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_label_rating"
                    style="@style/Profile.Metrics.Label"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:layout_marginBottom="@dimen/spacing_normal_16"
            android:background="@color/color_divider_light"/>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="@dimen/spacing_normal_16"
                android:paddingBottom="@dimen/spacing_normal_16">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_respect"
                    android:drawableStart="@drawable/ic_respect_24"
                    android:drawablePadding="@dimen/spacing_tiny_4"
                    style="@style/Profile.Metrics.Value"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_label_respect"
                    style="@style/Profile.Metrics.Label"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_normal_16">

        <ImageView
                android:id="@+id/ic_avatar"
                android:layout_width="@dimen/btn_round_size_40"
                android:layout_height="@dimen/btn_round_size_40"
                android:src="@drawable/ic_avatar"
                android:contentDescription="@string/app_name" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wr_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/ic_avatar"
                android:layout_marginStart="@dimen/spacing_normal_16">

            <EditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_hint_first_name"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    tools:text="John"
                    style="@style/Profile.EditText.Single"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/ic_avatar"
                android:layout_below="@+id/wr_first_name"
                android:layout_marginStart="@dimen/spacing_normal_16">

            <EditText
                    android:id="@+id/et_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_hint_last_name"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    tools:text="Doe"
                    style="@style/Profile.EditText.Single" />

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_divider_dark"
        android:layout_marginStart="@dimen/spacing_maximum_72"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/Profile.InfoItem" >

        <ImageView
                android:layout_width="@dimen/btn_round_size_40"
                android:layout_height="@dimen/btn_round_size_40"
                android:src="@drawable/ic_about"
                android:contentDescription="@string/app_name"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_normal_16">

            <EditText
                    android:id="@+id/et_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_hint_about"
                    android:inputType="textMultiLine"
                    style="@style/Profile.EditText.MultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_divider_dark"
            android:layout_marginStart="@dimen/spacing_maximum_72"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/Profile.InfoItem" >

        <ImageView
                android:layout_width="@dimen/btn_round_size_40"
                android:layout_height="@dimen/btn_round_size_40"
                android:src="@drawable/ic_repo"
                android:contentDescription="@string/app_name"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_normal_16"
                android:layout_marginEnd="@dimen/spacing_normal_16"
                android:layout_weight="1">

            <EditText
                    android:id="@+id/et_repository"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_hint_repository"
                    android:inputType="textUri"
                    style="@style/Profile.EditText.Single"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
                android:layout_width="@dimen/image_button_size_24"
                android:layout_height="@dimen/image_button_size_24"
                android:src="@drawable/ic_eye_24dp"
                android:contentDescription="@string/app_name"
                android:layout_gravity="center_vertical"/>

    </LinearLayout>

</LinearLayout>