<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/profile_bg"
            android:id="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:scaleType="centerCrop"
            android:contentDescription="@string/app_name" app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintHorizontal_bias="0.0"/>
    <ImageView
            android:layout_width="@dimen/avatar_round_size"
            android:layout_height="@dimen/avatar_round_size"
            app:srcCompat="@drawable/avatar_default"
            android:id="@+id/iv_avatar"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintBottom_toTopOf="@+id/tv_nick_name" android:contentDescription="@string/app_name"/>
    <ImageButton
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40" app:srcCompat="@drawable/ic_edit_black_24dp"
            android:id="@+id/btn_edit"
            android:background="@drawable/btn_round_bg" app:layout_constraintTop_toTopOf="@+id/iv_avatar"
            app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
            app:layout_constraintStart_toEndOf="@+id/iv_avatar"
            android:layout_marginStart="@dimen/spacing_huge_32"
            android:contentDescription="@string/app_name"/>
    <ImageButton
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40"
            app:srcCompat="@drawable/ic_switch_day_night"
            android:id="@+id/btn_switch_theme"
            android:background="@drawable/btn_round_bg"
            app:layout_constraintTop_toTopOf="@+id/iv_avatar"
            app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
            app:layout_constraintEnd_toStartOf="@+id/iv_avatar"
            android:layout_marginEnd="@dimen/spacing_huge_32"
            android:contentDescription="@string/app_name"/>
    <TextView
            android:text="@string/profile_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nick_name"
            style="@style/Profile.Header.Nickname"
            app:layout_constraintTop_toBottomOf="@+id/iv_avatar"
            android:layout_marginTop="@dimen/spacing_normal_16"
            app:layout_constraintStart_toStartOf="@+id/iv_avatar"
            app:layout_constraintEnd_toEndOf="@+id/iv_avatar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/tv_rank"
            android:textAlignment="center"/>
    <TextView
            android:text="@string/profile_user_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_rank" style="@style/Profile.Header.Rank"
            app:layout_constraintTop_toBottomOf="@+id/tv_nick_name"
            app:layout_constraintStart_toStartOf="@+id/tv_nick_name"
            app:layout_constraintEnd_toEndOf="@+id/tv_nick_name"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/imageView"
            android:textAlignment="center"/>
    <View
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:id="@+id/v_metrics"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:background="?attr/colorAccentedSurface"/>
    <View
            android:layout_width="@dimen/profile_divider_height"
            android:layout_height="0dp"
            android:id="@+id/v_metrics_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/v_metrics" app:layout_constraintTop_toTopOf="@+id/v_metrics"
            app:layout_constraintBottom_toBottomOf="@+id/v_metrics" android:layout_marginTop="@dimen/spacing_normal_16"
            android:layout_marginBottom="@dimen/spacing_normal_16" android:background="?attr/colorDivider"/>
    <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Profile.Metrics.Value"
            android:text="@string/profile_respect"
            android:drawableStart="@drawable/ic_sp_24"
            android:drawablePadding="@dimen/spacing_tiny_4"
            app:layout_constraintStart_toStartOf="@+id/v_metrics"
            app:layout_constraintEnd_toStartOf="@+id/v_metrics_divider"
            app:layout_constraintTop_toTopOf="@+id/v_metrics"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/tv_rating_label"
            app:layout_constraintVertical_chainStyle="packed"/>
    <TextView
            android:id="@+id/tv_rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Profile.Metrics.Label"
            android:text="@string/profile_label_rating"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/tv_rating"
            app:layout_constraintStart_toStartOf="@+id/tv_rating"
            app:layout_constraintEnd_toEndOf="@+id/tv_rating"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="@+id/v_metrics"/>
    <TextView
            android:id="@+id/tv_respect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Profile.Metrics.Value"
            android:text="@string/profile_respect"
            android:drawableStart="@drawable/ic_respect_24"
            android:drawablePadding="@dimen/spacing_tiny_4"
            app:layout_constraintBottom_toTopOf="@+id/tv_respect_label"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="@id/v_metrics"
            app:layout_constraintStart_toEndOf="@id/v_metrics_divider"
            app:layout_constraintEnd_toEndOf="@id/v_metrics"/>
    <TextView
            android:id="@+id/tv_respect_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Profile.Metrics.Label"
            android:text="@string/profile_label_respect"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/tv_respect"
            app:layout_constraintStart_toStartOf="@id/tv_respect"
            app:layout_constraintEnd_toEndOf="@id/tv_respect"
            app:layout_constraintBottom_toBottomOf="@id/v_metrics"
            app:layout_constraintHorizontal_bias="0.5"/>
    <ImageView
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40"
            app:srcCompat="@drawable/ic_avatar"
            android:id="@+id/ic_avatar"
            android:contentDescription="@string/app_name" app:layout_constraintTop_toBottomOf="@+id/v_metrics"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="@dimen/spacing_normal_16"
            android:layout_marginStart="@dimen/spacing_normal_16"/>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/ic_avatar" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ic_avatar" android:layout_marginEnd="@dimen/spacing_normal_16"
            android:layout_marginStart="@dimen/spacing_normal_16">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_first_name"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"
                tools:text="John"
                style="@style/Profile.EditText.Single"  />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/wr_first_name"
            app:layout_constraintTop_toBottomOf="@+id/wr_first_name" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/spacing_normal_16">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_last_name"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"
                tools:text="Doe"
                style="@style/Profile.EditText.Single"/>
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/profile_divider_height"
        android:id="@+id/v_divider_1"
        android:background="?attr/colorDivider"
        app:layout_constraintTop_toBottomOf="@id/wr_last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/spacing_normal_16"
        android:layout_marginStart="72dp"/>

    <ImageView
        android:layout_width="@dimen/btn_round_size_40"
        android:layout_height="@dimen/btn_round_size_40"
        app:srcCompat="@drawable/ic_about"
        android:id="@+id/ic_about"
        app:layout_constraintTop_toBottomOf="@id/v_divider_1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:contentDescription="@string/app_name"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/ic_about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ic_about"
            android:layout_marginEnd="@dimen/spacing_normal_16"
            android:layout_marginStart="@dimen/spacing_normal_16"
            app:counterEnabled="true"
            app:counterMaxLength="128">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_about"
                android:inputType="textMultiLine"
                style="@style/Profile.EditText.MultiLine" android:id="@+id/et_about" tools:text="Something"/>

    </com.google.android.material.textfield.TextInputLayout>
    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/profile_divider_height"
        android:id="@+id/v_divider_2"
        android:background="?attr/colorDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wr_about"
        android:layout_marginEnd="@dimen/spacing_normal_16"
        android:layout_marginStart="72dp"/>
    <ImageView
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40"
            app:srcCompat="@drawable/ic_repo"
            android:id="@+id/ic_repo"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_divider_2"
            android:layout_marginStart="@dimen/spacing_normal_16"
            android:layout_marginTop="@dimen/spacing_normal_16"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_repository"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/ic_repo"
            android:layout_marginStart="@dimen/spacing_normal_16" app:layout_constraintTop_toTopOf="@id/ic_repo"
            app:layout_constraintEnd_toStartOf="@+id/ic_eye">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_repository"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_repository"
                android:inputType="textUri"
                style="@style/Profile.EditText.Single" tools:text="https://github.com"/>
    </com.google.android.material.textfield.TextInputLayout>
    <ImageView
            android:layout_width="@dimen/image_button_size_24"
            android:layout_height="@dimen/image_button_size_24"
            app:srcCompat="@drawable/ic_eye_24dp"
            android:id="@+id/ic_eye"
            android:contentDescription="@string/app_name" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/wr_repository"
            android:layout_marginEnd="@dimen/spacing_normal_16" app:layout_constraintBottom_toBottomOf="@id/wr_repository"
            app:layout_constraintStart_toEndOf="@id/wr_repository" android:layout_marginStart="@dimen/spacing_normal_16"/>

</androidx.constraintlayout.widget.ConstraintLayout>